バックエンドの登録とDB作成
